# Nexus

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  loadtest.js  prometheus.yml  render.yaml  run.sh
backend/: .dockerignore  Dockerfile  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_webhooks.py  0003_password_reset_tokens.py
backend/src/nexus/: main.py
backend/src/nexus/ai/: analyzer.py
backend/src/nexus/api/: ai.py  alerts.py  auth.py  dashboard.py  devices.py  scans.py  webhooks.py  ws.py
backend/src/nexus/core/: config.py  database.py  security.py
backend/src/nexus/models/: __init__.py  alert.py  device.py  password_reset.py  scan.py  user.py  webhook.py
backend/src/nexus/monitor/: engine.py
backend/src/nexus/scanner/: checks.py  engine.py
backend/src/nexus/schemas/: ai.py  alert.py  auth.py  dashboard.py  device.py  scan.py  webhook.py
backend/src/nexus/services/: webhook.py  websocket.py
backend/src/nexus/tasks/: __init__.py  celery_app.py  scan_tasks.py
backend/src/nexus/templates/: scan_report.html
backend/tests/: conftest.py  test_ai.py  test_ai_analyzer.py  test_api_coverage.py  test_api_more.py  test_auth.py  test_dashboard.py  test_database.py  test_devices.py  test_health.py  test_monitor.py  test_scanner_checks.py  test_scanner_engine.py  test_scanner_engine_run.py  test_scans.py  test_services_webhook.py  test_tasks.py  test_webhooks.py  test_websocket.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  (+2 more)
(+21 files in other folders)
