[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus"
version = "0.1.0"
description = "NEXUS - Unified Operations & Security Intelligence Platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyjwt>=2.0",
    "bcrypt>=4.0",
    "httpx>=0.28",
    "python-dotenv>=1.0",
    "celery>=5.4",
    "redis>=5.2",
    "langchain>=0.3",
    "langchain-ollama>=0.3",
    "prometheus-client>=0.21",
    "weasyprint>=62",
    "jinja2>=3.1",
    "slowapi>=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-httpx>=0.35",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "mypy>=1.15",
    "httpx>=0.28",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
lint.select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
strict = true
python_version = "3.12"
disallow_any_unimported = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
